Fix table overflow

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -84,7 +84,7 @@ blockquote {
     }
 }
 table {
-    overflow-x: scroll;
+    overflow-x: auto;
     border-top: 2px solid #777;
     border-bottom: 2px solid #777;
     margin: 8px 0;
